--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -1,22 +1,80 @@
-h1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 2rem;
-}
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+  }
 
 body {
     padding-left: 1rem;
     padding-right: 1rem;
-    background: rgba(232, 231, 231, 0.915);
+    background: rgba(56, 53, 53, 0.915);
     color: e4e4e4;
+    margin: 0 auto;
 }
 
+h1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    color:rgba(229, 221, 221, 0.915)
+}
+
+
 .form {
-    font-size: 1rem;
+    font-size: 5rem;
     gap: 0.5rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
 }
+
+
+.btn {
+    background: hsl(200, 100%, 50%, 0.1);
+    border: 1px solid hsl(200, 100%, 50%);
+    color: hsl(200, 100%, 50%);
+    padding: 0.25em 0.5em;
+    border-radius: 0.25em;
+    cursor: pointer;
+    outline: none;
+    transition-duration: 0.4s;
+  }
+
+  .btn:hover {
+    background-color: #04AA6D; /* Green */
+    color: white;
+  }
+
+  #add_med_btn {
+    background: hsl(200, 100%, 50%, 0.1);
+    border: 1px solid hsl(200, 100%, 50%);
+    color: hsl(200, 100%, 50%);
+    padding: 0.25em 0.5em;
+    border-radius: 0.25em;
+    cursor: pointer;
+    outline: none;
+    font-size: 2rem;
+    transition-duration: 0.4s;
+    width: 25%;
+    box-shadow: 0 9px #999;
+    text-align: center;
+    float: down;
+    position: absolute;
+    bottom: 5rem;
+    left: 5rem;
+  }
+
+  #add_med_btn:hover {
+    background-color: #04AA6D; /* Green */
+    color: white;
+  }
+
+  #button:active {
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
+
+  #target {
+    display:flex
+  }
