Working on using React components and containers

--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -108,6 +108,10 @@ tr:hover {
     background-color: #716464; /* Highlight row on hover */
 }
 
+#time {
+    background: rgb(65, 63, 63);
+    border: none;
+}
 
 
 
