--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -1,13 +1,30 @@
+/* Variables */
+:root {
+    --softgreen: #A9BCA670;
+    --mediumgreen: #7CA48A70;
+    --strongGreen: #57927470;
+    --deepGreen: #36675E70;
+    --complementBeige: #d5d3be7d;
+    --teal: #19414B70;
+
+
+    --blue: #1e90ff;    
+    --white): rgba(255, 255, 255, 0.70);
+
+  }
+
 * {
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
+    color: black;
   }
 
 body {
     padding-left: 1rem;
     padding-right: 1rem;
     background: rgba(255, 255, 255, 0.814);
-    color: white;
+    color: var(--white);
+    background-color: var(--softgreen);
     margin: 0 auto;
 }
 
@@ -17,36 +34,57 @@ h1 {
     justify-content: center;
     align-items: center;
     font-size: 2rem;
-    color:rgba(229, 221, 221, 0.915)
+    color:rgba(255, 255, 255, 0.70);
+    box-shadow: 5px, 5px;
+}
+
+h2 {
+    align-self: flex-start;
+    font-size: 1rem;
+    color:rgba(255, 255, 255, 0.70);
+    box-shadow: 5px, 5px;
 }
 
 .mainContainer {
     border: solid black;
-    background-color: #d4f3ec70;
     margin: 2rem;
     padding: 1rem;
+    border-radius: 2rem;
 }
 
 .headerContainer {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    background:rgb(92, 92, 92);
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--strongGreen);
     margin: 1rem;
     padding: 1rem;
     border: solid black;
+    border-radius: 2rem;
 }
 
 .medicationContainer {
     border: solid black;
+    background-color: var(--softgreen);
     margin: 1rem;
     padding: 1rem;
+    border-radius: 2rem;
 }
 
 .addMedicationContainer {
     border: solid black;
     margin: 1rem;
     padding: 1rem;
+    background-color: var(--deepGreen);
+    border-radius: 2rem;
+}
+
+.entryForm {
+    background-color: var(--teal);
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: 2rem;
 }
 
 
@@ -55,6 +93,15 @@ h1 {
     gap: 0.5rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.horizontalForm {
+    font-size: 5rem;
+    gap: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -72,8 +119,27 @@ h1 {
 
   .btn:hover {
     background-color: #04AA6D; /* Green */
-    color: white;
+    color: var(--white);
   }
+
+
+  .btnAccount {
+    font-size: 1rem;
+    background: var(--mediumgreen);
+    border: 1px solid var(--teal);
+    color: var(--teal);
+    padding: 0.25em 0.5em;
+    border-radius: 0.25em;
+    cursor: pointer;
+    outline: none;
+    transition-duration: 0.4s;
+  }
+
+  .btnAccount:hover {
+    background-color: #04AA6D; /* Green */
+    color: var(--white);
+  }
+
 
   #add_med_btn {
     background: hsl(200, 100%, 50%, 0.1);
@@ -96,7 +162,7 @@ h1 {
 
   #add_med_btn:hover {
     background-color: #04AA6D; /* Green */
-    color: white;
+    color: var(--white);
   }
 
   #button:active {
@@ -127,14 +193,15 @@ td {
 }
 
 th {
-    background-color: #454545; /* Light grey background */
+    background-color: var(--complementBeige); 
     font-weight: bold; /* Make header text bold */
 }
-tr:nth-child(even) {
-    background-color: #464545; /* Zebra-striping for rows */
+tr:nth-child(even) { 
+    /* zebra striping */
+    background-color: var(--deepGreen); 
 }
 tr:hover {
-    background-color: #716464; /* Highlight row on hover */
+    background-color: var(--deepGreen); /* Highlight row on hover */
 }
 
 #time {
@@ -199,7 +266,7 @@ tr:hover {
     top: 3px;
     width: 5px;
     height: 10px;
-    border: solid white;
+    border: solid var(--white);
     border-width: 0 3px 3px 0;
     transform: rotate(45deg);
   }
