--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -33,7 +33,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
     color:rgba(255, 255, 255, 0.70);
     box-shadow: 5px, 5px;
 }
@@ -44,6 +44,23 @@ h2 {
     color: var(--white);
     box-shadow: 5px, 5px;
     margin-left: 0.5rem;
+}
+
+hr {
+    font-size: 1rem;
+    color: black;
+}
+
+.banner {
+    background-color: var(--teal);
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
 }
 
 .mainContainer {
@@ -60,8 +77,23 @@ h2 {
     align-items: center;
     background-color: var(--deepGreen);
     margin: 1rem;
-    padding: 1rem;
-    border: solid black;
+    padding: 0.5rem;
+    border: 0.2rem solid var(--mediumgreen);
+    box-shadow: 2px 2px 5px var(--teal);
+    border-radius: 2rem;
+}
+
+.subHeaderContainer {
+    display: flex;
+    height: 1rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--deepGreen);
+    margin: 1rem;
+    padding: 0.75rem;
+    border: 0.2rem solid var(--mediumgreen);
+    box-shadow: 2px 2px 5px var(--teal);
     border-radius: 2rem;
 }
 
@@ -69,15 +101,26 @@ h2 {
     border: solid black;
     background-color: var(--deepGreen);
     margin: 1rem;
-    padding: 1rem;
+    padding: 0.5rem;
+    border: 0.2rem solid var(--mediumgreen);
+    box-shadow: 2px 2px 5px var(--teal);
     border-radius: 2rem;
 }
 
 .addMedicationContainer {
+    /* display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items:center;
+    flex-wrap: wrap; */
     border: solid black;
     margin: 1rem;
     padding: 1rem;
     background-color: var(--deepGreen);
+    margin: 1rem;
+    padding: 0.5rem;
+    border: 0.2rem solid var(--mediumgreen);
+    box-shadow: 2px 2px 5px var(--teal);
     border-radius: 2rem;
 }
 
@@ -106,6 +149,13 @@ h2 {
     align-items: center;
 }
 
+.date {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-self: center;
+}
+
 
 .btn {
     background: hsl(200, 100%, 50%, 0.1);
@@ -127,11 +177,11 @@ h2 {
 
   .btnAccount {
     font-size: 1rem;
-    background: var(--mediumgreen);
+    background: var(--complementBeige);
     border: 1px solid var(--teal);
     color: var(--teal);
     padding: 0.25em 0.5em;
-    border-radius: 0.25em;
+    border-radius: 2em;
     cursor: pointer;
     outline: none;
     transition-duration: 0.4s;
